--- a/Project_3_Collaborative_based_movie_recommendation_system.ipynb
+++ b/Project_3_Collaborative_based_movie_recommendation_system.ipynb
@@ -42,23 +42,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8456181a-fc32-469a-a2b4-8b5b91ccfac0"
+        "outputId": "0c3c8816-b740-4a54-8729-3de48f0ee454"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-10-19 21:52:42--  https://files.grouplens.org/datasets/movielens/ml-25m.zip\n",
+            "--2025-10-20 17:21:40--  https://files.grouplens.org/datasets/movielens/ml-25m.zip\n",
             "Resolving files.grouplens.org (files.grouplens.org)... 128.101.96.204\n",
             "Connecting to files.grouplens.org (files.grouplens.org)|128.101.96.204|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 261978986 (250M) [application/zip]\n",
             "Saving to: ‘ml-25m.zip’\n",
             "\n",
-            "ml-25m.zip          100%[===================>] 249.84M  37.8MB/s    in 6.9s    \n",
+            "ml-25m.zip          100%[===================>] 249.84M  45.8MB/s    in 5.2s    \n",
             "\n",
-            "2025-10-19 21:52:49 (36.4 MB/s) - ‘ml-25m.zip’ saved [261978986/261978986]\n",
+            "2025-10-20 17:21:45 (48.4 MB/s) - ‘ml-25m.zip’ saved [261978986/261978986]\n",
             "\n"
           ]
         }
@@ -81,9 +81,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZYnvt4xoNaQ-",
-        "outputId": "8763275c-3fcd-4ac8-f753-cf580e6bd5d9"
+        "outputId": "fffec5e4-db75-46a7-9259-fc9746151a68"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -4571,6 +4571,54 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "def recommend_for_user(user_id, top_n=10):\n",
+        "    # 1️⃣ 找到用户看过的电影\n",
+        "    watched_movies = final_ratings[final_ratings['userId'] == user_id]['new_title'].unique()\n",
+        "    print(f\"User {user_id} already watched {len(watched_movies)} \")\n",
+        "\n",
+        "    # 2️⃣ 初始化一个空的推荐得分字典\n",
+        "    scores = {}\n",
+        "\n",
+        "    # 3️⃣ 遍历用户看过的每部电影\n",
+        "    for movie in watched_movies:\n",
+        "        if movie in pt.index:  # 确保该电影存在于矩阵中\n",
+        "            index = np.where(pt.index == movie)[0][0]\n",
+        "            similar_movies = list(enumerate(similarity_scores[index]))\n",
+        "\n",
+        "            # 4️⃣ 累积相似电影分数\n",
+        "            for i, sim in similar_movies:\n",
+        "                similar_movie = pt.index[i]\n",
+        "                if similar_movie not in watched_movies:  # 不推荐已看过的\n",
+        "                    scores[similar_movie] = scores.get(similar_movie, 0) + sim\n",
+        "\n",
+        "    # 5️⃣ 按累积相似度排序\n",
+        "    sorted_scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)\n",
+        "\n",
+        "    # 6️⃣ 取前 top_n 个结果\n",
+        "    top_recs = sorted_scores[:top_n]\n",
+        "\n",
+        "    # 7️⃣ 打印结果（你也可以返回 DataFrame）\n",
+        "    print(f\"\\n🎬 Recommondation for {user_id} are {top_n} :\\n\")\n",
+        "    for rank, (movie, score) in enumerate(top_recs, 1):\n",
+        "        print(f\"{rank}. {movie}  (Similarity: {score:.3f})\")\n",
+        "\n",
+        "    return top_recs\n",
+        "\n",
+        "# 调用：给用户1推荐10部电影\n",
+        "recommend_for_user(1, top_n=10)\n"
+      ],
+      "metadata": {
+        "id": "Mlj0miPRor2Q"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
